# radium

./: .coverage  .gitignore  README.MD  main.py  nitpick-style.toml  pyproject.toml
nitpick/: all.toml  editorconfig.toml  file-structure.toml  flake8.toml  isort.toml  pytest.toml  styleguide.toml
tests/: conftest.py  real_response.json  test_calculate_sha256.py  test_download_file.py  test_small_file.txt  test_tree_urls.py
