[tool.poetry]
name = "radium"
version = "0.1.0"
description = ""
authors = ["savosinvitali <savosinvitali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
nitpick = "^0.35.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = [
    "/nitpick/all.toml",
]